--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,26 +49,7 @@ jobs:
         run: "poetry run python3 -c 'import pre_commit_run_hook_entry'"
 
   test:
-    name: "Python ${{ matrix.python-version }}"
-
-    strategy:
-      matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11.0-beta.3"]
-        include:
-          - python-version: "3.7"
-            python-cache-key: "3.7"
-
-          - python-version: "3.8"
-            python-cache-key: "3.8"
-
-          - python-version: "3.9"
-            python-cache-key: "3.9"
-
-          - python-version: "3.10"
-            python-cache-key: "dev"
-
-          - python-version: "3.11.0-beta.3"
-            python-cache-key: "3.11.0-beta.3"
+    name: "Test package"
 
     runs-on: "ubuntu-latest"
 
@@ -78,7 +59,7 @@ jobs:
       - name: "Install Python"
         uses: "actions/setup-python@v4.0.0"
         with:
-          python-version: "${{ matrix.python-version }}"
+          python-version-file: ".python-version"
 
       - name: "Install poetry"
         uses: "snok/install-poetry@v1.3.1"
@@ -89,27 +70,18 @@ jobs:
         uses: "actions/cache@v3.0.4"
         with:
           path: ".venv/"
-          key: "venv-${{ matrix.python-cache-key }}-${{ hashFiles('poetry.lock') }}"
+          key: "venv-dev-${{ hashFiles('poetry.lock') }}"
 
       - name: "Install package"
         run: "poetry install"
 
       - name: "Run pre-commit"
-        if: "${{ matrix.python-cache-key == 'dev' }}"
         uses: "pre-commit/action@v3.0.0"
 
       - name: "Run tests"
-        run: |
-          set -euo pipefail
-
-          if [ "${{ matrix.python-cache-key }}" != "dev" ]; then
-            export PYTEST_ADDOPTS="--no-cov"
-          fi
-
-          poetry run python3 -m pytest
+        run: "poetry run python3 -m pytest"
 
       - name: "Send report to coveralls"
-        if: "${{ matrix.python-cache-key == 'dev' }}"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         run: |
