--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,13 @@
+[tool.badabump]
+version_type = "semver"
+version_files = [
+  "./pyproject.toml",
+  "./src/pre_commit_run_hook_entry/__init__.py",
+]
+
 [tool.black]
 line_length = 79
+target_version = ["py37"]
 
 [tool.coverage.run]
 branch = true
@@ -33,8 +41,10 @@ disallow_untyped_decorators = true
 disallow_untyped_defs = true
 follow_imports = "normal"
 follow_imports_for_stubs = true
-ignore_missing_imports = true
+ignore_missing_imports = false
+mypy_path = "./src/"
 namespace_packages = true
+python_executable = "./.venv/bin/python3"
 show_column_numbers = true
 show_error_codes = true
 warn_redundant_casts = true
@@ -49,6 +59,13 @@ module = [
   "*.tests"
 ]
 ignore_errors = true
+
+# Local mypy config
+[[tool.mypy.overrides]]
+module = [
+  "pre_commit.*"
+]
+ignore_missing_imports = true
 
 [tool.poetry]
 name = "pre-commit-run-hook-entry"
@@ -77,10 +94,10 @@ pre-commit = "^2.19.0"
 
 [tool.poetry.dev-dependencies]
 coverage = {extras = ["toml"], version = "^6.4.1"}
+coveralls = "^3.3.1"
 mypy = "^0.961"
 pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
-coveralls = "^3.3.1"
 
 [tool.poetry.scripts]
 pre-commit-run-black-entry = "pre_commit_run_hook_entry.cli:main_black"
