--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,14 +9,6 @@ on:
 
 env:
   PYTHONUNBUFFERED: "1"
-  # Get latest versions by running,
-  #
-  # ```shell
-  # pip-latest-release badabump poetry twine
-  # ```
-  BADABUMP_VERSION: "21.3.3"
-  POETRY_VERSION: "1.1.3"
-  TWINE_VERSION: "4.0.1"
 
 jobs:
   dev:
@@ -31,21 +23,9 @@ jobs:
     steps:
       - uses: "actions/checkout@v3.0.2"
 
-      - name: "Install Python"
-        uses: "actions/setup-python@v4.0.0"
+      - uses: "./.github/actions/install_python_and_poetry"
         with:
           python-version-file: ".python-version"
-
-      - name: "Install poetry"
-        uses: "snok/install-poetry@v1.3.1"
-        with:
-          version: "${{ env.POETRY_VERSION }}"
-
-      - name: "Cache venv"
-        uses: "actions/cache@v3.0.4"
-        with:
-          path: "./.venv/"
-          key: "venv-dev-${{ hashFiles('poetry.lock') }}"
 
       - name: "Install package"
         run: "poetry install"
@@ -61,107 +41,34 @@ jobs:
     steps:
       - uses: "actions/checkout@v3.0.2"
 
-      - name: "Install Python"
-        uses: "actions/setup-python@v4.0.0"
+      - id: "python_and_poetry"
+        uses: "./.github/actions/install_python_and_poetry"
         with:
           python-version-file: ".python-version"
 
-      - name: "Install poetry"
-        uses: "snok/install-poetry@v1.3.1"
+      - uses: "./.github/actions/run_pre_commit"
         with:
-          version: "${{ env.POETRY_VERSION }}"
+          python-version: "${{ steps.python_and_poetry.outputs.python-version }}"
 
-      - name: "Cache venv"
-        uses: "actions/cache@v3.0.4"
+      - uses: "./.github/actions/run_tox"
         with:
-          path: "./.venv/"
-          key: "venv-dev-${{ hashFiles('poetry.lock') }}"
-
-      - name: "Install package"
-        run: "poetry install"
-
-      - name: "Run pre-commit"
-        uses: "pre-commit/action@v3.0.0"
-
-      - name: "Run tests"
-        run: "poetry run python3 -m pytest"
-
-      - name: "Send report to coveralls"
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        run: "poetry run python3 -m coveralls --service=github"
+          python-path: "${{ steps.python_and_poetry.outputs.python-path }}"
+          python-version: "${{ steps.python_and_poetry.outputs.python-version }}"
+          use-coveralls: "${{ matrix.dev }}"
+          coveralls-token: "${{ secrets.GITHUB_TOKEN }}"
 
   package:
     needs: ["test"]
-    name: "Build & deploy package"
 
-    runs-on: "ubuntu-latest"
-
-    steps:
-      - uses: "actions/checkout@v3.0.2"
-
-      - name: "Install Python"
-        uses: "actions/setup-python@v4.0.0"
-        with:
-          python-version-file: ".python-version"
-
-      - name: "Install poetry"
-        uses: "snok/install-poetry@v1.3.1"
-        with:
-          version: "${{ env.POETRY_VERSION }}"
-
-      - name: "Build package"
-        run: "poetry build"
-
-      - name: "Check package"
-        run: |
-          set -euo pipefail
-
-          python3 -m pip install twine==${{ env.TWINE_VERSION }}
-          python3 -m twine check ./dist/*
-
-      - name: "Publish package"
-        if: "${{ github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') }}"
-        uses: "pypa/gh-action-pypi-publish@v1.5.0"
-        with:
-          user: "${{ secrets.PYPI_USERNAME }}"
-          password: "${{ secrets.PYPI_PASSWORD }}"
+    uses: "./.github/workflows/ci_package.yml"
+    secrets:
+      pypi-user: "${{ secrets.PYPI_USERNAME }}"
+      pypi-password: "${{ secrets.PYPI_PASSWORD }}"
 
   release:
     needs: ["package"]
     if: "${{ startsWith(github.ref, 'refs/tags/') }}"
-    name: "Create GitHub release"
 
-    runs-on: "ubuntu-latest"
-
-    steps:
-      - uses: "actions/checkout@v3.0.2"
-
-      - name: "Fetch git data"
-        run: |
-          set -euo pipefail
-
-          git fetch --depth=1 origin +refs/tags/*:refs/tags/*
-          git fetch --prune --unshallow
-
-      - name: "Install Python"
-        uses: "actions/setup-python@v4.0.0"
-        with:
-          python-version-file: ".python-version"
-
-      - name: "Install badabump"
-        run: "python3 -m pip install badabump==${{ env.BADABUMP_VERSION }}"
-
-      - id: "badabump"
-        name: "Prepare release info"
-        run: 'python3 -m badabump.ci prepare_release "${{ github.ref }}"'
-
-      - name: "Create new release"
-        uses: "actions/create-release@v1.1.4"
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        with:
-          tag_name: "${{ steps.badabump.outputs.tag_name }}"
-          release_name: "${{ steps.badabump.outputs.release_name }}"
-          body: "${{ steps.badabump.outputs.release_body }}"
-          prerelease: "${{ steps.badabump.outputs.is_pre_release }}"
+    uses: "./.github/workflows/ci_release.yml"
+    secrets:
+      release-token: "${{ secrets.GITHUB_TOKEN }}"
