--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ disallow_incomplete_defs = true
 disallow_untyped_calls = true
 disallow_untyped_decorators = true
 disallow_untyped_defs = true
+exclude = ["./docs/", "./tests/"]
 follow_imports = "normal"
 follow_imports_for_stubs = true
 ignore_missing_imports = false
@@ -92,12 +93,14 @@ classifiers = [
 python = "^3.7"
 pre-commit = "^2.19.0"
 
-[tool.poetry.dev-dependencies]
-coverage = {extras = ["toml"], version = "^6.4.3"}
+[tool.poetry.group.dev.dependencies]
+mypy = "^0.982"
+
+[tool.poetry.group.test.dependencies]
+coverage = {extras = ["toml"], version = "^6.5.0"}
 coveralls = "^3.3.1"
-mypy = "^0.971"
-pytest = "^7.1.2"
-pytest-cov = "^3.0.0"
+pytest = "^7.1.3"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.scripts]
 pre-commit-run-black-entry = "pre_commit_run_hook_entry.cli:main_black"
@@ -108,7 +111,7 @@ pre-commit-which-hook-entry = "pre_commit_run_hook_entry.cli:main_which"
 "Bug Tracker" = "https://github.com/playpauseandstop/pre-commit-run-hook-entry/issues"
 
 [tool.pytest.ini_options]
-minversion = "7.1.2"
+minversion = "7.1.3"
 testpaths = ["./tests/"]
 addopts = "--cov --no-cov-on-fail"
 log_level = "info"
