--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.badabump]
 version_type = "semver"
-version_files = [
-  "./pyproject.toml",
-  "./src/pre_commit_run_hook_entry/__init__.py",
-]
 
 [tool.black]
 line_length = 79
@@ -14,11 +14,18 @@ branch = true
 source = ["pre_commit_run_hook_entry"]
 
 [tool.coverage.paths]
-source = ["./src/"]
+source = ["src/"]
 
 [tool.coverage.report]
+exclude_lines = [
+  "if TYPE_CHECKING:",
+  "@overload",
+]
+omit = [
+  "src/*/__main__.py",
+  "src/*/annotations.py",
+]
 fail_under = 95
-omit = ["./src/pre_commit_run_hook_entry/__main__.py"]
 skip_covered = true
 show_missing = true
 
@@ -27,8 +34,8 @@ profile = "attrs"
 combine_as_imports = true
 force_alphabetical_sort_within_sections = true
 lines_between_types = 0
-src_paths = ["./", "./src/"]
-virtual_env = "./.venv/"
+src_paths = ["src/"]
+virtual_env = ".venv/"
 
 [tool.mypy]
 allow_untyped_globals = true
@@ -39,32 +46,24 @@ disallow_incomplete_defs = true
 disallow_untyped_calls = true
 disallow_untyped_decorators = true
 disallow_untyped_defs = true
-exclude = ["./docs/", "./tests/"]
+exclude = ["docs/", "migrations/", "tests/"]
 follow_imports = "normal"
 follow_imports_for_stubs = true
 ignore_missing_imports = false
-mypy_path = "./src/"
+mypy_path = "src/"
 namespace_packages = true
-python_executable = "./.venv/bin/python3"
+no_implicit_optional = true
+python_executable = ".venv/bin/python3"
 show_column_numbers = true
 show_error_codes = true
 warn_redundant_casts = true
 warn_return_any = true
 warn_unused_ignores = true
 
-[[tool.mypy.overrides]]
-module = [
-  "conftest",
-  "migrations.*",
-  "tests.*",
-  "*.tests"
-]
-ignore_errors = true
-
 # Local mypy config
 [[tool.mypy.overrides]]
 module = [
-  "pre_commit.*"
+  "pre_commit.*",
 ]
 ignore_missing_imports = true
 
@@ -112,39 +111,34 @@ pre-commit-which-hook-entry = "pre_commit_run_hook_entry.cli:main_which"
 
 [tool.pytest.ini_options]
 minversion = "7.1.3"
-testpaths = ["./tests/"]
+testpaths = ["tests/"]
 addopts = "--cov --no-cov-on-fail"
 log_level = "info"
 
 [tool.tox]
 legacy_tox_ini = """
 [tox]
-envlist = py310,py310-minimum-requirements
+envlist = py311,py311-minimum-requirements
 skipsdist = True
 
 [gh-actions]
 python =
-  3.10: py310
+  3.11: py311
 
 [testenv]
 passenv =
   PYTHONPATH
   PYTEST_ADDOPTS
-setenv =
-  PYTHONPATH=.
 skip_install = True
-whitelist_externals = poetry
+allowlist_externals =
+  poetry
 commands_pre =
   poetry install --only main,test
 commands =
-  poetry run python3 -m pytest
+  python3 -m pytest {tty:--color=yes}
 
-[testenv:py310-minimum-requirements]
+[testenv:py311-minimum-requirements]
 commands_pre =
   poetry install --only main,test
   poetry run python3 -m pip install pre-commit==2.19.0
 """
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
