--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,7 @@ python = "^3.9"
 pre-commit = ">=3.0.0,<5.0"
 
 [tool.poetry.group.dev.dependencies]
+ipython = "^8.18.1"
 mypy = "^1.14.0"
 
 [tool.poetry.group.test.dependencies]
