--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
 
     strategy:
       matrix:
-        os: ["ubuntu-24.04", "macos-latest"]
+        os: ["ubuntu-24.04", "macos-14"]
 
     runs-on: "${{ matrix.os }}"
 
